# load-testing-sagemaker-endpoints

./: README.md  pyproject.toml  requirements.txt
locust/: README.md  common.sh  config-bedrock-streaming.sh  config-bedrock.sh  config-streaming.sh  config-whisper-common.sh  config-whisper-sagemaker-common.sh  config-whisper-transcribe.sh  config.sh  distributed.sh  instruct.txt  locust_script.py  locust_script_bedrock.py  locust_script_bedrock_streaming.py  locust_script_sagemaker_whisper.py  locust_script_streaming.py  locust_script_tgi.py  locust_script_tgi_streaming.py  locust_script_transcribe.py  run-multiple-distributed.sh  run-multiple.sh  stop.sh  test-py-script.sh  test.txt
locust/bedrock/: README.md  bedrock_script_common.py  commands.txt  locust_script_bedrock.py  locust_script_bedrock_streaming.py  multi-run-config.sh  single-run-config.sh
locust/llm-tgi/: README.md  commands.txt  locust_script_tgi_streaming.py  multi-run-config.sh  single-run-config.sh
locust/sagemaker/: config-whisper-sagemaker-common.sh  locust_script.py  locust_script_streaming.py
test-data/: chat-1000-tokens-anthropic.txt  chat-1000-tokens-mistral.txt  chat-1000-tokens.txt  llama3-instruct-1000.txt  test2.txt
