[tool.poetry]
name = "load-testing-sagemaker-endpoints"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.113"
botocore = "^1.34.113"
locust = "2.17.0"
huggingface-hub = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
